# article-scraper

./: README.md  main.py  pyproject.toml
dataset/: final_dataset.jsonl  onet_dataset.jsonl  polskieradio_dataset.jsonl
src/: batch_generator.py  generator.py  scraper.py
