[project]
name = "article-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=2.8.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.1",
    "trafilatura>=2.0.0",
]
